[package]
name = "interderpcli"
version = "0.1.0"
edition = "2021"
authors = ["nord <info@nordsec.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
crypto_box = { version = "0.8.2", features = ["std"] }
tokio = { version = ">=1.22", features = ["io-util", "net", "sync", "macros", "rt-multi-thread", "io-std", "time"] }
env_logger = "0.9.0"
base64 = "0.13.0"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.23"
clap = { version = "4.3.3", features = ["derive"] }
ring = "0.16"



telio-crypto = { path = "../../crates/telio-crypto" }
telio-relay = { path = "../../crates/telio-relay" }
telio-sockets = { path = "../../crates/telio-sockets" }
log = "0.4.17"
anyhow = "1.0.69"
itertools = "0.10.5"

[dev-dependencies]
tokio = { version = ">=1.22", features = ["macros", "rt-multi-thread", "io-std"] }
env_logger = "0.9.0"
