[package]
name = "interderpcli"
version = "0.1.0"
edition = "2021"
authors = ["nord <info@nordsec.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
clap.workspace = true
ring = { default-features = false, version = "0.17.5" }

anyhow.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "macros", "rt-multi-thread", "io-std", "time"] }
url.workspace = true

telio-crypto.workspace = true
telio-relay.workspace = true
telio-sockets.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }
