[package]
name = "nordvpnlite"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

# Used as a lightweight and safe (because a TCP server has the risk of remote code execution)
# way for the API and daemon to communicate.
# Tokio support is needed, because the daemon runs on the async runtime.
interprocess = { version = "2.2.3", features = ["tokio"] }

nix = { version = "0.30.1", features = ["signal"] }

telio = { path = "../..", features = ["disable_ens"], default-features = false }
tokio.workspace = true
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures.workspace = true
thiserror.workspace = true
regex.workspace = true
ipnet.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
uuid = { workspace = true, features = ["serde"] }
anyhow.workspace = true
smart-default = "0.7.1"
base64 = "0.22.1"
daemonize = "0.5.0"
rand.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
temp-dir = "0.1.16"
temp-file = "0.1.9"
visibility = "0.1.1"
assert_matches = "1.5.0"
