[package]
name = "nordvpnlite"
version = "0.1.0"
edition = "2021"
authors = ["info@nordvpn.com"]
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

# Used as a lightweight and safe (because a TCP server has the risk of remote code execution)
# way for the API and daemon to communicate.
# Tokio support is needed, because the daemon runs on the async runtime.
interprocess = { version = "2.4.2", features = ["tokio"] }

nix = { version = "0.31.3", features = ["signal"] }

telio-core = { workspace = true, features = ["disable_ens"], default-features = false }
tokio.workspace = true
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
futures.workspace = true
thiserror.workspace = true
regex.workspace = true
ipnet.workspace = true
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
  "query",
] }
uuid = { workspace = true, features = ["serde"] }
anyhow.workspace = true
base64 = "0.22.1"
daemonize = "0.5.0"
rand.workspace = true

[dev-dependencies]
serial_test.workspace = true
temp-dir = "0.2.0"
temp-file = "0.2.0"
visibility = "0.1.1"
assert_matches = "1.5.0"
