[package]
name = "tcli"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
base64 = "0.13"
clap = { version = "3.1", features = ["derive"] }
crypto_box = "0.7.0"
dirs = "4.0.0"
hex = "0.4.3"
ipnetwork = "0.18"
rand = { version = "0.8.4", features = ["std", "std_rng"] }
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.10.0"
sha2 = "0.9.8"
shellwords = "1.1.0"
thiserror = "1.0"
tokio = { version = ">=1.22", features = ["full"] }
regex = "1.5.5"
log = { version = "0.4.14", features = ["release_max_level_info"] }
flexi_logger = "0.22.0"
rustyline = "11.0.0"

telio = { path = "../.." }
telio-utils = { path = "../../crates/telio-utils" }
telio-shared = { path = "../../crates/telio-shared" }
telio-model = { path = "../../crates/telio-model" }
telio-wg = { path = "../../crates/telio-wg" }
telio-proto = { path = "../../crates/telio-proto" }
telio-traversal = { path = "../../crates/telio-traversal" }
telio-task = { path = "../../crates/telio-task" }
telio-relay = { path = "../../crates/telio-relay" }
telio-sockets = { path = "../../crates/telio-sockets" }
telio-nat-detect = { version = "0.1.0", path = "../../crates/telio-nat-detect" }
