[package]
name = "tcli"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
default-run = "tcli"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
rustyline = "17.0"
shellwords = "1.1.0"

anyhow.workspace = true
base64.workspace = true
clap.workspace = true
hex.workspace = true
ipnet.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }

telio = { path = "../.." }
telio-crypto.workspace = true
telio-model.workspace = true
telio-proto.workspace = true
telio-relay.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true
