[package]
name = "teliod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "help",
] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Used as a lightweight and safe (because a TCP server has the risk of remote code execution)
# way for the API and daemon to communicate.
# Tokio support is needed, because the daemon runs on the async runtime.
interprocess = { version = "2.2", default-features = false, features = [
  "tokio",
] }

nix = { version = "0.30", default-features = false, features = ["signal"] }

uuid = { version = "1.17", default-features = false, features = ["serde"] }
telio = { path = "../.." }
tokio = { version = "1.45", default-features = false }
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", default-features = false, features = [
  "futures-v0_3",
] }
futures = { version = "0.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
regex = { version = "1.11", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rumqttc = { version = "0.24", default-features = false, features = [
  "use-rustls",
] }
rustls-native-certs = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false }
smart-default = { version = "0.7.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
dirs = { version = "6.0.0", default-features = false }
daemonize = { version = "0.5.0", default-features = false }

form_urlencoded = { version = "1.2.1", optional = true, default-features = false }
maud = { version = "0.27.0", optional = true, default-features = false }
lazy_static = { version = "1.5", optional = true, default-features = false }
const_format = { version = "0.2.34", optional = true, default-features = false }
rust-cgi = { version = "0.7.2", optional = true, default-features = false }

[dev-dependencies]
rand = "0.9.1"
serial_test = "3.2.0"
temp-dir = "0.1.16"
temp-file = "0.1.9"

[features]
cgi = ["const_format", "rust-cgi", "lazy_static", "maud", "form_urlencoded"]
qnap = ["cgi"]
