[package]
name = "sock-prot"
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
libc = { default-features = false, version = "0.2.155" }

[target.'cfg(any(target_os = "ios", target_os = "tvos"))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
version-compare = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos"))'.dependencies]
log = "0.4.21"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt"] }
debug_panic = "0.2.1"
nix = { version = "0.28", features=["socket"] }
system-configuration = { git = 'https://github.com/NordSecurity/system-configuration-rs.git' }
network-framework-sys = "0.1"
block = "0.1"
dispatch = { git = "https://github.com/NordSecurity/rust-dispatch.git", rev = "13447cd7221a74ebcce1277ae0cfc9a421a28ec5" }
once_cell = "1.19.0"
parking_lot = "0.12.3"

[target.'cfg(windows)'.dependencies]
log = "0.4.21"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt"] }
winapi = { version = "0.3.9", features = [
    "winerror",
    "iphlpapi",
    "impl-default",
    "netioapi",
] }

[dev-dependencies]
rstest = "0.21.0"
