[package]
name = "telio-crypto"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
serde_with = { features = ["macros"], default-features = false, version = "3.7.0" }
chacha20poly1305 = "0.10.1"
chacha20 = "0.9.1"
zeroize = { version = "1", default-features = false }
curve25519-dalek = "4.1.3"

base64.workspace = true
crypto_box.workspace = true
hex.workspace = true
tracing.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde.workspace = true
thiserror.workspace = true

telio-utils.workspace = true

[dev-dependencies]
bstr = "0.2"
