[package]
name = "telio-crypto"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
aead = { version = "0.5.2", default-features = false }
serde_with = { features = [
  "macros",
], default-features = false, version = "3.16.1" }
chacha20poly1305 = { default-features = false, version = "0.10.1" }
chacha20 = "0.9.1"
zeroize = { workspace = true, features = ["derive"] }
curve25519-dalek = { default-features = false, version = "4.1.3" }

base64.workspace = true
crypto_box.workspace = true
hex.workspace = true
tracing.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde.workspace = true
thiserror.workspace = true

telio-utils.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
bstr = "1.12"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[profile.bench]
debug = true
