[package]
name = "telio-dns"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
rand = "0.8"
hickory-client = { git = "https://github.com/NordSecurity/trust-dns.git", tag = "v3.0.0" }
hickory-proto = { git = "https://github.com/NordSecurity/trust-dns.git", tag = "v3.0.0" }
hickory-resolver = { git = "https://github.com/NordSecurity/trust-dns.git", tag = "v3.0.0" }
hickory-server = { git = "https://github.com/NordSecurity/trust-dns.git", tag = "v3.0.0", features = ["resolver"] }
async-trait.workspace = true
base64.workspace = true
boringtun.workspace = true
x25519-dalek.workspace = true
ipnetwork.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
mockall = { workspace = true, optional = true }
pnet_packet.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "macros"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true

[dev-dependencies]
dns-parser = "0.8.0"

mockall.workspace = true
