[package]
name = "telio-dns"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
rand = { default-features = false, version = "0.8" }
hickory-server = { git = "https://github.com/NordSecurity/trust-dns.git", rev = "8489dfa83f5cba0a6a77b3306560a00fd5421df7", features = ["hickory-resolver"], default-features = false }
async-trait.workspace = true
base64.workspace = true
boringtun.workspace = true
x25519-dalek.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
libc.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }
pnet_packet.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "macros"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true

[dev-dependencies]
dns-parser = "0.8.0"

mockall.workspace = true
