[package]
name = "telio-dns"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
rand.workspace = true
hickory-server = { git = "https://github.com/NordSecurity/trust-dns.git", tag = "v3.0.1", features = ["hickory-resolver"], default-features = false }
async-trait.workspace = true
neptun.workspace = true
x25519-dalek.workspace = true
ipnet.workspace = true
libc.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }
nix.workspace = true
pnet_packet.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "macros"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true

[dev-dependencies]
dns-parser = "0.8.0"
rand_core_compat.workspace = true

mockall.workspace = true
