[package]
name = "telio-firewall"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
enum-map = "2.7.3"
smallvec = "1.15.1"
ipnet.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }
pnet_packet.workspace = true
rustc-hash.workspace = true
parking_lot.workspace = true
rand.workspace = true
num_enum.workspace = true

telio-crypto.workspace = true
telio-utils.workspace = true
telio-model.workspace = true
telio-network-monitors.workspace = true

[dev-dependencies]
mockall.workspace = true
sn_fake_clock.workspace = true

telio-utils = {workspace = true, features = ["sn_fake_clock"] }

[[test]]
name = "firewall_integration_tests"
path = "tests/firewall_integration_tests.rs"
test = false