[package.metadata.cargo-udeps.ignore]
normal = ["serde_json"]

[package]
name = "telio-lana"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
moose = []

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
cargo-platform = { version = "=0.1.7", optional = true } # moose v5.0.0 requires this

telio-utils.workspace = true

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
anyhow.workspace = true
