[package]
name = "telio-lana"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
moose = []

[dependencies]
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true

telio-utils.workspace = true

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
anyhow.workspace = true
