[package]
name = "telio-model"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
# When possible this feature enables macos code on other platforms
pretend_to_be_macos = []

[dependencies]
log = { version = "0.4.14", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10"
serde_json = "1.0"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24"
ipnetwork = "0.18"
modifier = "0.1.0"
num_enum = "0.6.1"
itertools = "0.10"

telio-crypto = { version = "0.1.0", path = "../telio-crypto" }
telio-utils = { version = "0.1.0", path = "../telio-utils" }


[dev-dependencies]
pretty_assertions = "0.7.2"
once_cell = "1"
