[package]
name = "telio-model"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
# When possible this feature enables macos code on other platforms
pretend_to_be_macos = []

[dependencies]
strum_macros = "0.24"

ipnetwork.workspace = true
itertools.workspace = true
tracing.workspace = true
modifier.workspace = true
num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true

telio-crypto.workspace = true
telio-utils.workspace = true

[dev-dependencies]
once_cell.workspace = true
pretty_assertions.workspace = true
