[package]
name = "telio-nat-detect"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
tokio = { version = ">=1.22", features = ["full"] }
nat-detect = "0.1.7"
log = {version = "0.4.14", features = ["release_max_level_info"]}
