[package]
name = "telio-nurse"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
bitflags = { version = "1.3.2" }
histogram = "0.6.9"
md5 = "0.7.0"

async-trait.workspace = true
crypto_box.workspace = true
futures.workspace = true
mockall = { workspace = true, optional = true }
nat-detect.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
socket2.workspace = true
surge-ping.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tracing.workspace = true
uuid.workspace = true

telio-crypto.workspace = true
telio-lana.workspace = true
telio-model.workspace = true
telio-nat-detect.workspace = true
telio-proto.workspace = true
telio-task.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true

[dev-dependencies]
csv = "1.1"

telio-sockets.workspace = true
telio-wg = { workspace = true, features = ["mockall"] }
tokio = { workspace = true, features = ["net", "sync", "test-util"] }

[build-dependencies]
protobuf-codegen-pure.workspace = true
