[package]
name = "telio-nurse"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
bitflags = "2.7.0"
histogram = "0.6.9"
md5 = { default-features = false, version = "0.7.0" }
csv = "1.1"

async-trait.workspace = true
crypto_box.workspace = true
futures.workspace = true
mockall = { workspace = true, optional = true }
mockall_double.workspace = true
nat-detect.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tracing.workspace = true
uuid.workspace = true

telio-crypto.workspace = true
telio-lana.workspace = true
telio-model.workspace = true
telio-nat-detect.workspace = true
telio-proto.workspace = true
telio-task.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true
once_cell.workspace = true

[dev-dependencies]
telio-sockets.workspace = true
telio-wg = { workspace = true, features = ["mockall"] }
tokio = { workspace = true, features = ["net", "sync", "test-util"] }
telio-nurse = { workspace = true, features = ["mockall"] }

[build-dependencies]
protobuf-codegen-pure.workspace = true
