[package]
name = "telio-perf"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
default = []

[dependencies]
async-trait.workspace = true
neptun.workspace = true
futures.workspace = true
ipnet.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "macros"] }
tracing.workspace = true
x25519-dalek.workspace = true

telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true
