[package]
name = "telio-pmtu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["net"] }
socket2.workspace = true
libc.workspace = true
pnet_packet.workspace = true
rand.workspace = true
tracing.workspace = true

telio-utils.workspace = true
