[package]
name = "telio-pmtu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["net"] }
socket2.workspace = true
libc.workspace = true
pnet_packet.workspace = true
tracing.workspace = true

telio-utils.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["net", "macros", "rt"] }
tracing-subscriber.workspace = true

[[example]]
name = "probe-pmtu"

