[package]
name = "telio-pq"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = []

[dependencies]
# pqcrypto version is fixed, because the newer version implements incompatible kyber kem according to draft specs
pqcrypto-kyber = { version = "=0.8.1", default-features = false }
pqcrypto-internals = "=0.2.11"
pqcrypto-traits = { default-features = false, version = "0.3.5" }
hmac = { version = "0.12.1", default-features = false }
blake2 = { default-features = false, version = "0.10.6" }
blake3 = { workspace = true, default-features = false }

telio-crypto.workspace = true
telio-model.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true

neptun.workspace = true
pnet_packet.workspace = true
mockall = { workspace = true, optional = true }
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

base64.workspace = true
mockall.workspace = true
proptest.workspace = true
