[package]
name = "telio-pq"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = []

[dependencies]
# safe_pqc_kyber implements Round-3 Kyber768 (wire-compatible with the retired pqcrypto-kyber 0.7.6)
# and fixes KyberSlash; the FIPS-203 ml-kem crates are NOT wire-compatible.
safe_pqc_kyber = { version = "0.6.3", features = ["std"] }
hmac = { version = "0.13.0", default-features = false }
blake2 = { default-features = false, version = "0.10.6" }
blake3 = { workspace = true, default-features = false }

telio-crypto.workspace = true
telio-model.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true

neptun.workspace = true
pnet_packet.workspace = true
mockall = { workspace = true, optional = true }
parking_lot.workspace = true
rand.workspace = true
rand_core_compat.workspace = true # provides the rand_core 0.6 RNG required by safe_pqc_kyber
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
byteorder = "1.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

base64.workspace = true
mockall.workspace = true
proptest.workspace = true
