[package]
name = "telio-proto"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
http = "1.3.1"
hyper-util = "0.1.15"
prost = "0.14.1"
protobuf = "3.7.2"
tokio-stream = "0.1.17"
tonic = "0.14.0"
tonic-prost = "0.14"
tower = "0.5.2"

anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true

[build-dependencies]
anyhow.workspace = true
protobuf-codegen.workspace = true
tonic-prost-build = "0.14.0"

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { workspace = true, features = ["sync"] }

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
