[package]
name = "telio-proto"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[features]
enable_ens = ["rustls/aws_lc_rs", "dep:aws-lc-rs", "dep:rustls-webpki"]

[dependencies]
http = "1.4.0"
llt-proto = { git = "https://github.com/NordSecurity/llt-proto.git", tag = "v1.0.0" }
hyper-util.workspace = true
prost = "0.14.1"
protobuf = "3.7.2"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-webpki = { version = "0.103.4", optional = true }
aws-lc-rs = { version = "=1.13.3", features = ["bindgen"], optional = true }
tokio-stream = "0.1.17"
tokio-rustls = { version = "0.26.4", default-features = false }
tonic = { version = "0.14.2" }
tonic-prost = "0.14"
tower = "0.5.2"

anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
hex.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true

[build-dependencies]
anyhow.workspace = true
protobuf-codegen.workspace = true

[dev-dependencies]
async-channel = "2.5.0"
rcgen = "0.14.6"
telio-utils = { workspace = true, features = ["mockall"] }
test-log = { version = "0.2.19", features = ["trace"] }
tokio = { workspace = true, features = ["sync"] }
tonic = { version = "0.14.2", features = ["tls-aws-lc"] }

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
